--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,91 +1,133 @@
-.slider-wrap {
-	width: 1000px;
-	height: 400px;
-	margin: auto;
+body {
+	background: #222;
+	font-family: Tahoma;
+	padding-bottom: 100px;
+}
+h1 {
+	text-align: center;
 	margin-top: 100px;
+	color: #fff;
+}
+.slider-wrap {
+	width: 1200px;
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 100px;
 	position: relative;
 }
 .slider-container {
-	height: 400px;
 	overflow: hidden;
 	margin: auto;
-	margin-top: 100px;
 	position: relative;
 }
 .slides {
-	height: 400px;
+	height: 650px;
 	position: relative;
 }
 .slide {
 	float: left;
-	width: 1000px;
-	height: 400px;
+	width: 1200px;
+	height: 650px;
 	overflow: hidden;
 	position: relative;
 }
-.slide1 {
-	background: #FFEE2D;
+.slider-wrap2 {
+	width: 1000px;
 }
-.slide2 {
-	background: #57A13C;
+.slider-wrap2 .slides {
+	height: 500px;
 }
-.slide3 {
-	background: #6744A1
+.slider-wrap2 .slide {
+	width: 1000px;
+	height: 500px;
 }
-.slide4 {
-	background: #FF24E1
+.slide img {
+	width: 100%;
+	height: 100%;
 }
-.slide5 {
-	background: #53FFF3
-}
-.slide6 {
-	background: #FF2E5E
-}
-
 /* prev - next */
 .btn-prev {
 	position: absolute;
-	left: 0;
+	left: -23px;
 	top: 50%;
-	margin-top: -10px;
+	margin-top: -65px;
 	z-index: 1;
+	width: 46px;
+	height: 95px;
+	background: url(../img/arrows.png);
+	border-radius: 0 100% 100% 0;
+	background-position: 0 -95px;
+}
+.btn-prev:hover {
+	background-position: 0 0;
 }
 .btn-next {
 	position: absolute;
-	right: 0;
+	right: -24px;
 	top: 50%;
-	margin-top: -10px;
+	margin-top: -65px;
 	z-index: 1;
+	width: 46px;
+	height: 95px;
+	background: url(../img/arrows.png);
+	background-position: -45px -95px;
 }
-
+.btn-next:hover {
+	background-position: -45px 0;
+}
 /* paginatiob */
 .pagination {
 	text-align: center;
+	padding-left: 0;
 }
 .pagination li {
 	display: inline-block;
-	width: 15px;
-	height: 15px;
+	width: 18px;
+	height: 18px;
 	border-radius: 50%;
+	margin-left: 4px;
 	margin-right: 8px;
-	background: #888;
+	background: #666;
 	cursor: pointer;
+	box-shadow: inset -1px -1px #555;
+	-webkit-transition: .5s;
+	-o-transition: .5s;
+	transition: .5s;
 }
 .pagination li.active,
 .pagination li:hover {
-	background: #555;
+	background: #C5C5C5;
 }
 
 .animate {
-	background: #ECFFCE;
+	background: rgba(0,0,0,.7);
 	height: 100px;
-	color: #333;
+	color: #fff;
 	font-size: 24px;
 	text-align: center;
 	line-height: 100px;
 	position: absolute;
 	left: 0;
 	right: 0;
+	bottom: -100px;
+	-webkit-transition: 1s;
+	-o-transition: 1s;
+	transition: 1s;
+}
+.active .animate {
+	-webkit-animation-name: animate;
+	-o-animation-name: animate;
+	animation-name: animate;
+	-webkit-animation-duration: 1s;
+	-o-animation-duration: 1s;
+	animation-duration: 1s;
 	bottom: 0;
 }
-
+@-webkit-keyframes animate {
+	0% {
+		bottom: -100px;
+	}
+	100% {
+		bottom: 0;
+	}
+}
