--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
 	padding-top: 100px;
 }
 .slider-wrap {
-	margin-bottom: 100px;
+	padding-bottom: 100px;
 }
 .slider-wrap .slider {
 	overflow: hidden;
@@ -59,6 +59,9 @@ body {
 	width: 80%;
 	margin: auto;
 	position: relative;
+}
+.range-slider1 {
+	width: 50%;
 }
 .range-drag {
 	position: absolute;
