--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,83 +1,97 @@
 body {
 	margin: 0;
-	background: #060401;
 	padding-top: 100px;
+	text-align: center;
+	background: #111;
 }
-.slider-wrap {
-	padding-bottom: 100px;
+.carousel {
+	margin-bottom: 100px;
+	position: relative;
+	display: inline-block;
 }
-.slider-wrap .slider {
+.carousel .slider {
 	overflow: hidden;
 	width: 1000px;
-	margin: 0 auto 20px;
-}
-.slider-wrap .slider-small {
-	width: 100%;
-}
-.slider-wrap .slider-inner {
 	position: relative;
+	margin: 0 auto;
+}
+.carousel .slider-inner {
+	position: relative;
+	left: 0;
+	background: #555;
+}
+.carousel .slider-inner:after {
+	content: '';
+	clear: both;
+	display: block;
 }
 .slider-inner .slide {
-	width: 950px;
-	height: 500px;
-	margin-right: 25px;
-	margin-left: 25px;
+	width: 300px;
+	height: 250px;
 	float: left;
 	position: relative;
 	background: gold;
 }
-.slider-wrap .slider-small .slide {
-	width: 800px;
-	height: 400px;
+.carousel2 .slider-inner .slide {
+	margin-left: 10px;
+	margin-right: 10px;
 }
-.slider-inner .slide:nth-of-type(2) {
-	background: gray;
-}
-.slider-inner .slide:nth-of-type(3) {
-	background: blue;
+
+.carousel3 .slider-inner .slide {
+	margin-left: 0;
+	margin-right: 0;
 }
 .slide img {
 	width: 100%;
 	height: 100%;
 }
-.animate {
-	background: rgba(0,0,0,.7);
-	height: 100px;
-	color: #fff;
-	font-size: 24px;
+.carousel .arrow {
+	position: absolute;
+	top: 50%;
+	margin-top: -80px;
+	width: 46px;
+	height: 95px;
+	cursor: pointer;
+	border: none;
+}
+.carousel .arrow.prev {
+	position: absolute;
+	left: -23px;
+	background: url(../img/arrows.png);
+	border-radius: 0 100% 100% 0;
+	background-position: 0 -95px;
+}
+.carousel .arrow.next {
+	position: absolute;
+	right: -24px;
+	background: url(../img/arrows.png);
+	background-position: -45px -95px;
+
+}
+.carousel .arrow.prev:hover {
+	background-position: 0 0;
+}
+.carousel .arrow.next:hover {
+	background-position: -45px 0;
+}
+
+.pagination {
 	text-align: center;
-	line-height: 100px;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
 }
-.range-slider {
-	height: 10px;
-	background: gray;
-	clear: both;
-	width: 80%;
-	margin: auto;
-	position: relative;
-}
-.range-slider1 {
-	width: 50%;
-}
-.range-drag {
-	position: absolute;
-	left: 0;
+.pagination .pagination-item {
+	display: inline-block;
+	margin-left: 8px;
+	margin-right: 4px;
 	width: 20px;
 	height: 20px;
-	top: -5px;
-	margin-left: -10px;
 	border-radius: 50%;
-	background: gold;
+	background: #999;
 	cursor: pointer;
+	-webkit-transition: background-color .3s;
+	-o-transition: background-color .3s;
+	transition: background-color .3s;
 }
-.range-track {
-	height: 100%;
-	position: absolute;
-	width: 0;
-	left: 0;
-	background: red;
+.pagination .pagination-item:hover,
+.pagination .pagination-item.active {
+	background: #555;
 }
